changed fetch url link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="film">
             <div class="container">
                 <form class="film__form" id='form'>
-                    <input class="film__info" type="text" id="search" placeholder="search ...">
+                    <input class="film__info" type="text" id="search" placeholder="search ..." value="hulk">
                     <select class="film__info" id="film__filter">
                         <option value="a_z">A-Z</option>
                         <option value="z_a">Z-A</option>
